# Fuse_machine

./: README.md
Week2/12_factor_app/: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.backend.txt  requirements.frontend.txt
Week2/12_factor_app/docs/: mkdocs.yml
Week2/12_factor_app/docs/docs/: index.md
Week2/12_factor_app/models/: vocab.pkl
Week2/12_factor_app/src/: config.py
Week2/12_factor_app/src/backend/: Dockerfile.backend  config.py  dependencies.py  main.py  model.py
Week2/12_factor_app/src/frontend/: Dockerfile.frontend  app.py  config.py
Week2/12_factor_app/week2/: __init__.py  dataset.py  features.py  plots.py
Week2/12_factor_app/week2/modeling/: predict.py  train.py
